--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,8 +9,11 @@ description: A new Flutter project.
 # Read more about versioning at semver.org.
 version: 1.0.0+1
 
+
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
