--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: ribbon
 description: A Ribbon Decoration on a widget.
 version: 0.0.1
-author: ni-jj
 homepage: https://github.com/ni-jj/flutter-ribbon.git
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
